--- a/index.html
+++ b/index.html
@@ -1,12 +1,106 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Proyecto JavaScript</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+
+    <script src="https://kit.fontawesome.com/8d2e8e4c09.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
-    
+    <header class="sticky-top">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-warning">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">My Wallet</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Login</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+        </header>
+        <main class="container">
+            <div class="row m-5">
+                <div class="col-sm-12 col-md-6">
+                    <button type="button" class="btn btn-success w-100 py-3" data-bs-target="modal"  data-bs-toggle="#ingresoModal"><i class="fa-thin fa-right-to-bracket fa-4x text-primary"></i>Añadir Ingreso</button>
+                </div>
+                <div class="col-sm-12 col-md-6">
+                    <button class="btn btn-danger w-100 py-3"><i class="fa-thin fa-right-from-bracket fa-4x"></i>Añadir Egreso</button>
+                </div>
+                <div class="col-12 card-title text-center my-5 text-secondary">
+                    <h1>#aqui va el balance total</h1>
+                </div>
+            </div>
+            <hr>
+            <section class="text-center">
+                <h2>Ultimas actualizaciones</h2>
+                <li>
+                    <ul></ul>
+                    <ul></ul>
+                    <ul></ul>
+                    <ul></ul>
+                    <ul></ul>
+                    <ul></ul>
+                    <ul></ul>
+                    <ul></ul>
+                    <ul></ul>
+                    <ul></ul>
+                </li>
+
+            </section>
+
+        </main>
+        <footer>
+
+        </footer>
+        <!-- Modal -->
+<div class="modal fade" id="ingresoModal" tabindex="-1" aria-labelledby="ingresoModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="ingresoModalLabel">Modal title</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          ...
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Modal -->
+<div class="modal fade" id="egresoModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          ...
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
+<script src="js/bootstrap.min.js"></script>
 </html>
