--- a/pages/home.html
+++ b/pages/home.html
@@ -73,18 +73,19 @@
       <hr />
       <section class="text-center">
         <h2>Ultimas actualizaciones</h2>
-        <li>
-          <ul></ul>
-          <ul></ul>
-          <ul></ul>
-          <ul></ul>
-          <ul></ul>
-          <ul></ul>
-          <ul></ul>
-          <ul></ul>
-          <ul></ul>
-          <ul></ul>
-        </li>
+        <div class="container">
+          <div class="row mt-5">
+            <div class="col">
+              <h3>Conoce nuestros cursos</h3>
+              <hr />
+            </div>
+          </div>
+          <div id="tarjetas_container" class="row mt-5">
+            <p>Aquí van las tarjetas</p>
+          </div>
+        </div>
+      </main>
+
       </section>
     </main>
     <footer></footer>
