--- a/pages/registro.html
+++ b/pages/registro.html
@@ -16,7 +16,7 @@
           <div class="card">
             <img
               src="../assets/billetera.png"
-              class="card-img-top"
+              class="card-img-top logo"
               alt="logo"
             />
             <div class="card-body">
@@ -50,8 +50,10 @@
                   id="text_password2"
                   required
                 />
-                <a class="float-start mt-2" href="../index.html">Volver</a>
-                <button class="btn btn-primary float-end mt-2">
+                <a class="float-start mt-3 text-warning" href="../index.html"
+                  >Volver</a
+                >
+                <button class="btn btn-warning float-end mt-2">
                   Registrar
                 </button>
               </form>
