--- a/pages/administracion.html
+++ b/pages/administracion.html
@@ -12,7 +12,11 @@
     <header class="sticky-top">
       <nav class="navbar navbar-expand-lg navbar-dark bg-warning">
         <div class="container-fluid">
-          <i class="fa-solid fa-wallet mx-1"></i>
+          <img
+            src="../assets/billetera.png"
+            class="card-img-top logo"
+            alt="logo"
+          />
           <a class="navbar-brand" href="#">My Wallet</a>
           <button
             class="navbar-toggler"
@@ -55,7 +59,7 @@
         <div class="col-sm-12 col-md-6">
           <button
             type="button"
-            class="btn btn-success w-100 py-3 shadow-lg"
+            class="btn btn-success w-100 py-3 shadow-lg my-2"
             data-bs-target="#ingresoModal"
             data-bs-toggle="modal"
           >
@@ -81,8 +85,8 @@
       </div>
       <hr />
       <div class="text-center text-warning">
-        <h1>
-          <i class="fa-regular fa-circle-down"></i>Tu Billetera<i
+        <h1> 
+          <i class="fa-regular fa-circle-down"></i> Tus Registros <i
             class="fa-regular fa-circle-down"
           ></i>
         </h1>
@@ -133,7 +137,11 @@
         <div class="modal-content">
           <div class="modal-header">
             <h5 class="modal-title" id="ingresoModalLabel">Añadir Ingreso</h5>
-            <i class="fa-solid fa-right-to-bracket fa-2x text-success mx-1"></i>
+            <img
+            src="../assets/billetera.png"
+            class="card-img-top logo"
+            alt="logo"
+          />
             <button
               type="button"
               class="btn-close"
@@ -262,6 +270,34 @@
         </div>
       </div>
     </div>
+
+    <!-- Modal Edicion -->
+    <div
+      class="modal fade"
+      id="editModal"
+      tabindex="-1"
+      aria-labelledby="myModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered">
+        <div id="modal-content" class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="myModalLabel">Actualizar Registro</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <!-- cuerpo del modal de edicion  -->
+          <div class="modal-body">
+            <!-- acá va el formulario de edicion  -->
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script src="../js/bootstrap.min.js"></script>
     <script src="../js/administracion.js"></script>
     <script
