--- a/pages/home.html
+++ b/pages/home.html
@@ -12,7 +12,11 @@
     <header class="sticky-top">
       <nav class="navbar navbar-expand-lg navbar-dark bg-warning">
         <div class="container-fluid">
-          <i class="fa-solid fa-wallet mx-1"></i>
+          <img
+            src="../assets/billetera.png"
+            class="card-img-top logo"
+            alt="logo"
+          />
           <a class="navbar-brand" href="#">My Wallet</a>
           <button
             class="navbar-toggler"
@@ -42,7 +46,8 @@
               </li>
               <li class="nav-item position-absolute end-0 mx-5">
                 <a class="nav-link" href="../index.html"
-                  >Log Out<i class="fas fa-door-open mx-1"></i></a>
+                  >Log Out<i class="fas fa-door-open mx-1"></i
+                ></a>
               </li>
             </ul>
           </div>
@@ -50,12 +55,11 @@
       </nav>
     </header>
 
-
-    
     <main class="container">
       <div class="row m-5">
         <div class="col-12 card-title text-center my-5 text-secondary">
           <h1>#aqui va el balance total</h1>
+          <div id="container_balance"></div>
         </div>
       </div>
       <hr />
@@ -76,11 +80,7 @@
       </section>
     </main>
 
-
-
-    <footer>
-      
-    </footer>
+    <footer></footer>
     <script src="../js/bootstrap.min.js"></script>
     <script
       src="https://kit.fontawesome.com/580e46aa1a.js"
