--- a/pages/administracion.html
+++ b/pages/administracion.html
@@ -274,7 +274,7 @@
     <!-- Modal Edicion -->
     <div
       class="modal fade"
-      id="editModal"
+      id="myModal"
       tabindex="-1"
       aria-labelledby="myModalLabel"
       aria-hidden="true"
